--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+This project is currently dead.
+
+Here is a possible alternative: https://github.com/kingsleyh/DLanguage
+
+
 D Language plugin for JetBrains IntelliJ
 
 Very much incomplete at the moment.
